# pytest-glaze

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest_formatter.py  pytest_glaze.py
.github/workflows/: ci.yml
pytest_glaze/: __init__.py  _colorizer.py  _colors.py  _formatter.py  _hooks.py  _testing.py  _types.py
tests/: conftest.py  helpers.py  test_bdd_plugin.py  test_coloring.py  test_colorizer.py  test_colors.py  test_e2e.py  test_parsers.py  test_plugin.py
tests/bdd/: conftest.py  test_advanced.py  test_authentication.py  test_checkout.py  test_edge_cases.py  test_shared.py
tests/bdd/features/: advanced.feature  edge_cases.feature  shared.feature
tests/corpus/: README.md  conftest.py  pytest_formatter.py  test_assertions.py  test_capture.py  test_exceptions.py  test_fixtures.py  test_parametrize.py  test_skips.py  test_warnings.py
tests/corpus/acceptance/: conftest.py  test_glaze_bdd_rendering.py  test_glaze_rendering.py  test_theme_selection.py
tests/corpus/acceptance/features/: glaze_rendering.feature
tests/corpus/bdd/: conftest.py  test_advanced.py  test_authentication.py  test_checkout.py  test_edge_cases.py  test_shared.py
tests/corpus/bdd/features/: authentication.feature  checkout.feature  edge_cases.feature  shared.feature
tests/corpus/exceptions/: conftest.py  test_assertions.py  test_capture.py  test_exceptions.py  test_fixtures.py  test_parametrize.py  test_skips.py  test_warnings.py
