[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "pytest-glaze"
version     = "0.3.3"
description = "A thin, transparent coat that makes your test output shine."
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [{ name = "mikejmz24", email = "miguelbass2009@gmail.com" }]

requires-python = ">=3.10"
dependencies    = ["pytest>=7.0"]

keywords = ["pytest", "plugin", "formatter", "output", "terminal", "color"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Terminals",
    "Environment :: Console",
]

[project.urls]
Homepage   = "https://github.com/mikejmz24/pytest-glaze"
Repository = "https://github.com/mikejmz24/pytest-glaze"
Issues     = "https://github.com/mikejmz24/pytest-glaze/issues"

[project.entry-points."pytest11"]
pytest_glaze = "pytest_glaze"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pylint>=4.0.5",
    "pytest-bdd>=8.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytest_glaze"]

[tool.pylint.main]
ignore = [".venv", "__pycache__"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[tool.pytest.ini_options]
addopts = "-p pytester"
markers = [
    "unit: fast, isolated unit tests with no I/O or subprocess",
    "integration: tests that wire multiple components together",
    "acceptance: BDD acceptance tests for user-facing rendering behavior",
    "e2e: end-to-end tests using pytester subprocesses",
    "security: tests covering sanitization and hostile input handling",
]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8
